# blood-donor-system

./: .gitignore  BloodDonorSystem.session.sql  Dockerfile  compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/blood_request/: dao.py  models.py  router.py  schemas.py
backend/app/common/: enums.py
backend/app/dao/: base.py  tables.py
backend/app/donation/: dao.py  models.py  router.py  schemas.py
backend/app/donor/: dao.py  models.py  router.py  schemas.py
backend/app/hospital/: dao.py  models.py  router.py  schemas.py
backend/app/hospital_staff/: dao.py  models.py  router.py  schemas.py
backend/app/migration/: env.py
backend/app/migration/versions/: 85ad94556f79_initial_revision.py
backend/app/pages/: admin.py  auth.py  common.py  hospital_staff.py
backend/app/tables/: router.py
backend/app/users/: auth.py  dao.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  security.py
backend/scripts/: entrypoint.sh
backend/test/: conftest.py  test_login.py  test_user_router.py
backend/test/factories/: base_factory.py  blood_request_factory.py  donation_factory.py  donor_factory.py  hospital_factory.py  hospital_staff_factory.py  user_factory.py
backend/test/fixtures/: hospital_fixtures.py  scenario_fixtures.py  user_fixtures.py
backend/test/loaders/: csv_loader.py
backend/test/scripts/: generate_test_data.py  reset_db.py
frontend/static/js/: script.js
frontend/templates/: base.html  index.html
frontend/templates/admin/: dashboard.html
(+19 files in other folders)
